use okhttp client for caching (instead of glide)
Signed-off-by: David Luhmer <david-dev@live.de>